--- a/src/server/canvas.html
+++ b/src/server/canvas.html
@@ -14,6 +14,7 @@
     }
 
     .Dialog {
+        display: none;
         position: absolute;
         background-color: gray;
     }
@@ -157,11 +158,11 @@
         top: 20;
     }
 
-    /*canvas {
-        position: absolute;
-        left: 0;
-        right: 0;
-    }*/
+        /*canvas {
+            position: absolute;
+            left: 0;
+            right: 0;
+        }*/
 
     canvas:not([data-name]) {
         display: none;
@@ -397,18 +398,48 @@ QtLogic.prototype = {
         if (images_data.length === 0) {
             callback();
         }
+        var setupImageTimeout = function (key) {
+            var timeoutFunc = function (key) {
+                QtLogic.images_ajax[key] = $.ajax({
+                    url:"http://" + window.location.hostname + ":" + imagesHostPortNumber + "/rm?i=" + key,
+                    complete:function () {
+                        delete QtLogic.images_timeouts[key];
+                        delete QtLogic.images[key];
+                        delete QtLogic.images_ajax[key];
+                    }
+                });
+            };
+            if (QtLogic.images_timeouts[key]) {
+                clearTimeout(QtLogic.images_timeouts[key]);
+                if(QtLogic.images_ajax[key]) {
+                    QtLogic.images_ajax[key].abort();
+                }
+            }
+            QtLogic.images_timeouts[key] = setTimeout(function () {
+                timeoutFunc(key);
+            }, 1000 * 90);
+        };
+
         var delayer = delayCallback(images_data.length, callback);
+        var delayerWithTimeout = function (key) {
+            setupImageTimeout(key);
+            delayer();
+        };
         $.each(images_data, function (_, img) {
-            var imgobj = QtLogic.images[data.data];
-            if (imgobj || typeof imgobj == 'object') {
-                delayer();
+            var imgobj = QtLogic.images[img];
+            if (imgobj) {
+                delayerWithTimeout(img);
                 return;
             }
             var image = new Image();
-            image.onload = delayer;
+            image.onload = function () {
+                QtLogic.images[img] = image;
+                delayerWithTimeout(img);
+            };
+            QtLogic.images[img] = 'holding';
             image.onerror = delayer;
             image.src = "http://" + window.location.hostname + ":" + imagesHostPortNumber + "/add?i=" + img;
-            QtLogic.images[img] = image;
+
         });
     },
     input:function (data) {
@@ -525,7 +556,7 @@ QtLogic.prototype = {
         var widget = this.getWidget(data.id);
         var containerElement = widget.container;
         if (widget && !containerElement.hasClass('DialogRoot')) {
-            containerElement.css({
+            containerElement.show().css({
                 left:data.x,
                 top:data.y
             });
@@ -544,8 +575,8 @@ QtLogic.prototype = {
             widget.children_container = $("<div class='Children'></div>");
             widget.container = $("<div class='CanvasContainer'></div>");
             widget.container.append(widget.canvas)
-                            .append(widget.children_container)
-                            .appendTo($('#widgets'));
+                    .append(widget.children_container)
+                    .appendTo($('#widgets'));
 
             widget.canvasDrawer = new CanvasDrawer(widget.canvas);
         }
@@ -563,7 +594,7 @@ QtLogic.prototype = {
             if (canvasElement.attr('width') != data.w)
                 canvasElement.attr('width', data.w);
             if (!containerElement.hasClass('DialogRoot')) {
-                containerElement.css({
+                containerElement.show().css({
                     left:data.x,
                     top:data.y
                 });
@@ -578,6 +609,7 @@ QtLogic.prototype = {
                         .addClass("Set");
                 var parents_dialog = canvasElement.parents(".Dialog");
                 parents_dialog
+                        .show()
                         .css({ width:data.w + WINDOW_LT.x + WINDOW_RB.x, height:data.h + WINDOW_LT.y + WINDOW_RB.y});
                 if (!canvasElement.hasClass("Set")) {
                     parents_dialog.css({left:data.x, top:data.y});
@@ -662,7 +694,7 @@ QtLogic.prototype = {
             } else {
                 if (flags & 8) {
                     newChildWidget.canvas.addClass('Popup');
-                    // Popup
+                    newChildWidget.container.addClass('Popup');
                 }
                 newChildWidget.canvas.parent().detach().appendTo(widget.children_container);
             }
@@ -863,7 +895,9 @@ QtLogic.prototype = {
     }
 };
 
-QtLogic.images = new Array();
+QtLogic.images = {};
+QtLogic.images_ajax = [];
+QtLogic.images_timeouts = [];
 
 function parseMouseEvent(evt, widget) {
     var data = {};
@@ -1069,7 +1103,11 @@ CanvasDrawer.prototype = {
         this.composition = {};
         this.font = '9pt Helvetica';
         this.clip = {};
-        this.transform = [[1,0,0],[0,1,0],[0,0,1]];
+        this.transform = [
+            [1, 0, 0],
+            [0, 1, 0],
+            [0, 0, 1]
+        ];
         this.pen = {};
         this.brush = {style:0};
 
@@ -1116,7 +1154,7 @@ CanvasDrawer.prototype = {
                 this.drawPolygon(data);
                 break;
             default:
-            debug(data);
+                debug(data);
         }
     },
     drawImage:function (data) {
@@ -1182,7 +1220,7 @@ CanvasDrawer.prototype = {
         var img = QtLogic.images[data.data];
         if (img && typeof img == 'object') {
             var ctx = this.t_ctx;
-            var ptrn = ctx.createPattern(img,'repeat');
+            var ptrn = ctx.createPattern(img, 'repeat');
             var r = data.r;
             ctx.fillStyle = ptrn;
             //ctx.translate(img.width / 2.0, img.height / 2.0);
@@ -1280,54 +1318,54 @@ CanvasDrawer.prototype = {
         ctx.stroke();
     },
     setupBrush:function (brush) {
-            var ctx = this.t_ctx;
-            switch (brush.style) {
-                case 0: // Qt::NoBrush
-                    ctx.fillStyle = "rgba(0,0,0,0)"; // no filling
-                    break;
-                case 1: // Qt::SolidPattern
-                    ctx.fillStyle = brush.color;
-                    break;
-                case 15: // Qt::LinearGradientPattern
-                    var gradient = brush.gradient;
-                    ctx.fillStyle = CanvasHelper.createGradient(ctx, gradient, 15);
-                    break;
-                default:
-                    console.log('Unknown style: ' + brush.style);
-            }
+        var ctx = this.t_ctx;
+        switch (brush.style) {
+            case 0: // Qt::NoBrush
+                ctx.fillStyle = "rgba(0,0,0,0)"; // no filling
+                break;
+            case 1: // Qt::SolidPattern
+                ctx.fillStyle = brush.color;
+                break;
+            case 15: // Qt::LinearGradientPattern
+                var gradient = brush.gradient;
+                ctx.fillStyle = CanvasHelper.createGradient(ctx, gradient, 15);
+                break;
+            default:
+                console.log('Unknown style: ' + brush.style);
+        }
     },
     setupPen:function (pen) {
-            var ctx = this.t_ctx;
-            if (pen.color) {
-                ctx.strokeStyle = pen.color;
-            }
-            if (pen.brush) {
-                ctx.strokeStyle = CanvasHelper.createGradient(ctx, pen.brush.gradient, pen.brush.style);
-            }
-            if (pen.dash && pen.dash.pattern.length != 0) {
-                if (typeof ctx.mozDash == 'object')
-                    ctx.mozDash = pen.dash.pattern;
-                else if (typeof ctx.setLineDash == 'function')
-                    ctx.setLineDash(pen.dash.pattern);
-                if (typeof ctx.mozDashOffset == 'number')
-                    ctx.mozDashOffset = pen.dash.offset;
-                else if (typeof ctx.lineDashOffset == 'number')
-                    ctx.lineDashOffset = pen.dash.offset;
-            }
-            if (pen === "none" || isEmpty(pen)) {
-                ctx.strokeStyle = "rgba(0,0,0,0)";
-            }
-            ctx.lineWidth = pen.width;
-            ctx.lineJoin = pen.join;
-            ctx.miterLimit = pen.miter;
-            if (pen.cap)
-                ctx.lineCap = pen.cap;
+        var ctx = this.t_ctx;
+        if (pen.color) {
+            ctx.strokeStyle = pen.color;
+        }
+        if (pen.brush) {
+            ctx.strokeStyle = CanvasHelper.createGradient(ctx, pen.brush.gradient, pen.brush.style);
+        }
+        if (pen.dash && pen.dash.pattern.length != 0) {
+            if (typeof ctx.mozDash == 'object')
+                ctx.mozDash = pen.dash.pattern;
+            else if (typeof ctx.setLineDash == 'function')
+                ctx.setLineDash(pen.dash.pattern);
+            if (typeof ctx.mozDashOffset == 'number')
+                ctx.mozDashOffset = pen.dash.offset;
+            else if (typeof ctx.lineDashOffset == 'number')
+                ctx.lineDashOffset = pen.dash.offset;
+        }
+        if (pen === "none" || isEmpty(pen)) {
+            ctx.strokeStyle = "rgba(0,0,0,0)";
+        }
+        ctx.lineWidth = pen.width;
+        ctx.lineJoin = pen.join;
+        ctx.miterLimit = pen.miter;
+        if (pen.cap)
+            ctx.lineCap = pen.cap;
     },
     setupFont:function (font) {
         this.t_ctx.font = font;
     },
     setupTransform:function (transform) {
-            this.t_ctx.setTransform(transform[0][0], transform[0][1], transform[1][0], transform[1][1], transform[2][0] + this.currentTranslation.x, transform[2][1] + this.currentTranslation.y);
+        this.t_ctx.setTransform(transform[0][0], transform[0][1], transform[1][0], transform[1][1], transform[2][0] + this.currentTranslation.x, transform[2][1] + this.currentTranslation.y);
     },
     setupClipping:function (clip) {
         if (jQuery.isEmptyObject(clip))
@@ -1382,7 +1420,11 @@ CanvasDrawer.prototype = {
     }
 };
 
-CanvasDrawer.identityTransform = [[1,0,0],[0,1,0],[0,0,1]];
+CanvasDrawer.identityTransform = [
+    [1, 0, 0],
+    [0, 1, 0],
+    [0, 0, 1]
+];
 
 CanvasHelper = function () {
 };
@@ -1398,14 +1440,14 @@ CanvasHelper.createGradient = function (ctx, gradient, style) {
 };
 
 CanvasHelper.encodeUtf8 = function (string) {
-    string = string.replace(/\r\n/g,"\n");
+    string = string.replace(/\r\n/g, "\n");
     var utftext = "";
     for (var n = 0; n < string.length; n++) {
         var c = string.charCodeAt(n);
         if (c < 128) {
             utftext += String.fromCharCode(c);
         }
-        else if((c > 127) && (c < 2048)) {
+        else if ((c > 127) && (c < 2048)) {
             utftext += String.fromCharCode((c >> 6) | 192);
             utftext += String.fromCharCode((c & 63) | 128);
         }
@@ -1422,20 +1464,20 @@ CanvasHelper.decodeUtf8 = function (utftext) {
     var string = "";
     var i = 0;
     var c = c1 = c2 = 0;
-    while ( i < utftext.length ) {
+    while (i < utftext.length) {
         c = utftext.charCodeAt(i);
         if (c < 128) {
             string += String.fromCharCode(c);
             i++;
         }
-        else if((c > 191) && (c < 224)) {
-            c2 = utftext.charCodeAt(i+1);
+        else if ((c > 191) && (c < 224)) {
+            c2 = utftext.charCodeAt(i + 1);
             string += String.fromCharCode(((c & 31) << 6) | (c2 & 63));
             i += 2;
         }
         else {
-            c2 = utftext.charCodeAt(i+1);
-            c3 = utftext.charCodeAt(i+2);
+            c2 = utftext.charCodeAt(i + 1);
+            c3 = utftext.charCodeAt(i + 2);
             string += String.fromCharCode(((c & 15) << 12) | ((c2 & 63) << 6) | (c3 & 63));
             i += 3;
         }
